2006-09-25  Derek Atkins  <derek@ihtfp.com>

	[ Lots of files ]:
	  Add a new QOF_TYPE_NUMSTRING to add numeric sorts.  (#150799).
	  This new type is like QOF_TYPE_STRING but it sorts numerically
	  (first) and then sorts alphanumerically (by the tail of the
	  number).  Added the QOF Type, the gnome-search support, and
	  modified TRANS_NUM to use the new type.

2006-09-23  Derek Atkins  <derek@ihtfp.com>

	* src/ledger-core/split-register*.c:
	  suspend events around the Commit(). Fixes #347089 when combined
	  with r14495.

	* src/gnome/druid-acct-period.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/window-reconcile.c:
	  disable lot scrubbing during Check & Repair (#357370).
	  Lots are supposed to be disabled in the 2.0 release until we
	  get the cap-gains code working.  IMHO the cap-gains code should
	  deal with extra txn splits instead of creating additional txns.

2006-09-19  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Remove mt940 module completely from the build and
	SVN because all of its functionality has been moved into the hbci
	(aqbanking) module.

2006-09-19  Andreas Köhler  <andi5.py@gmx.net>

	* $some.glade: Use some more automatic scrollbars.

	* src/backend/file/gnc-backend-file.c:
	* src/gnome-utils/gnc-file.c: Do not complain about non-existent
	  files if we save to a new file. In pass one we ignore the error
	  returned by stat and call qof_session_begin with
	  create_if_nonexistent=TRUE for a second run.

2006-09-18  Christian Stimming  <stimming@tuhh.de>

	* src/engine/binreloc.[hc], src/engine/gnc-path.c,
	src/bin/gnucash-bin.c, configure.in: Implement automatic
	relocation of previously compiled-in paths. With the exception of
	the env variables in src/bin/gnucash, we're fully relocatable now.

2006-09-13  Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/gnc-plugin-hbci.c: Move the MT940
	importer action from the mt940 into the hbci plugin because in the